force-app/main/default/objects/Standard_Discount__c/Standard_Discount__c.object-meta.xml
<CustomObject>
    <label>Standard Discount</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>