force-app/main/default/objects/Standard_Discount__c/fields/Base_Discount__c.field-meta.xml
<CustomField>
    <fullName>Base_Discount__c</fullName>
    <label>Base Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>