force-app/main/default/objects/Standard_Discount__c/fields/Fulfilment_method__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_method__c</fullName>
    <label>Fulfilment method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>