force-app/main/default/objects/Standard_Discount__c/fields/Voice_Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Voice_Discount_Level__c</fullName>
    <label>Voice Discount Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>