force-app/main/default/objects/Standard_Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOB__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Voice_Discount_Level__c</columns>
    <columns>Base_Discount__c</columns>
    <columns>Discount_Code__c</columns>
    <columns>Fulfilment_method__c</columns>
    <columns>PR_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LOB__c</field>
        <operation>equals</operation>
        <value>Voice</value>
    </filters>
    <label>All</label>
</ListView>